--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,28 @@ div#loadScreen{
 	min-width: 100%;
 	min-height: 100%;
 	background-color: hotpink;
+	text-align: center;
+	align-content: center;
+	margin: 0 auto;
 	top: 0;
 	left: 0;
+}
+#loadScreen>div{
+	width: 100%;
+	display: block;
+	position: absolute;
+}
+img#wave1{
+	right: 0.6%;
+	top: 12px;
+}
+#loadScreen>div>img{
+	position: relative;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	height: auto;
 }
 
 div#playZone div{
