--- a/css/style.css
+++ b/css/style.css
@@ -30,27 +30,47 @@ div#loadScreen{
 	min-width: 100%;
 	min-height: 100%;
 	background-color: hotpink;
-	text-align: center;
-	align-content: center;
-	margin: 0 auto;
 	top: 0;
 	left: 0;
 }
-#loadScreen>div{
+#loadScreen div.waveload{
 	width: 100%;
+	min-width: 150px;
+	height: auto;
+	margin: 0 auto;
+	top: 35%;
 	display: block;
 	position: absolute;
+	text-align: center;
+}
+#loadScreen div.waveload img{
+	position: relative;
+	margin: 0 auto;
+}
+div#message{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: auto;
+	text-align: center;
+	margin: 0 auto;
+	text-align: center;
+	font-weight: 400;
+}
+div#message h4{
+	position: relative;
+	display: block;
+	font-weight: 400;
 }
 img#wave1{
-	right: 0.6%;
-	top: 12px;
+	right: 16px;
+	top: 8px;
 }
 #loadScreen>div>img{
 	position: relative;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
+	margin: auto;
 	height: auto;
 }
 
