--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,6 @@ div.face{ /*it's actually the whole visible body*/
 	min-height: 100%;
 	bottom: 0;
 }
-.block img, .backg img{
-	image-rendering: pixelated;
-}
 .backg img{
 	position: absolute;
 	bottom: 0;
@@ -234,7 +231,7 @@ div.face{ /*it's actually the whole visible body*/
 #block7{
 	/*glasses*/
 	z-index: 20;
-	left: 56px;
+	left: 52px;
 	top: 218px;
 }
 #block8{
@@ -280,7 +277,7 @@ div.face{ /*it's actually the whole visible body*/
 }
 #block15{
 	/*glass*/
-	top: 560px;
+	top: 516px;
 	left: -195px;
 }
 #block18{
@@ -371,12 +368,11 @@ div.song-name{
 div#why{
 	text-align: center;
 	position: absolute;
-	display: block;
+	display: inline-block;
 	margin: 0 auto;
-	top: 25%;
+	top: 12vh;
 	left: 0;
-	line-height: 45pt;
-	font-size: 64pt;
+	font-size: 38pt;
 	width: 100%;
 	height: 100%;
 	z-index: -50000;
