--- a/youtube/style.css
+++ b/youtube/style.css
@@ -305,14 +305,15 @@ div.volume-bar{
 .hide{
 	visibility: hidden;
 }
-.song-name{
+div.song-name{
 	white-space: nowrap;
 	filter: blur(0.8px);
 	z-index: 1000;
 	overflow: hidden;
 	position: absolute;
-	top: 200px;
-	width: 45vw;
+	top: 250px;
+	left: -2px;
+	width: 42vw;
 	line-height: 68pt;
 	min-width: 200px;
 	height: 12vh;
@@ -322,6 +323,13 @@ div.volume-bar{
 	display: inline-block;
 	opacity: 0.8;
 	/*background-color: aquamarine;*/
+}
+div.fade{
+	position: absolute;
+	z-index: 1000;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(to left, rgba(255,255,255,0) 80%,rgba(255,255,255, 1) 100%);
 }
 
 /*div w/ txt clipped to clipPath w/ circles*/
