--- a/css/viewport.css
+++ b/css/viewport.css
@@ -148,9 +148,22 @@ div#viewport{
 	}
 }
 
-@media only screen and (min-width : 1440px) {
+@media only screen and (min-width : 1440px){
 	div.face{
-		bottom: -2vh;
+		min-height: 100%;
+		bottom: -1%;
+	}
+	.volume-bar{
+		margin-top: 8%;
+	}
+	#volume-input{
+		height: 60%;
+	}
+}
+@media only screen and (min-width : 1440px) and (min-height: 1030px) and (max-height: 1080px)  {
+	div.face{
+		min-height: 100%;
+		bottom: -14%;
 	}
 	.volume-bar{
 		margin-top: 8%;
@@ -160,8 +173,6 @@ div#viewport{
 	}
 }
 
-
-/*NEEDS FIXING*/
 @media only screen and (min-width : 1824px) {
 	.container>div, .container2>div{
 		transform: scale(1.4);
@@ -171,7 +182,7 @@ div#viewport{
 		position: absolute;
 	}
 	div.face{
-		bottom: -58vh;
+		bottom: -48vh;
 		left: 70vw;
 	}
 	#loadScreen div.waveload{
