Sky dimensions for 4k displays now width dependent (and not height dependent). Removed old images not being used. Added media share thumbnail.

--- a/css/viewport.css
+++ b/css/viewport.css
@@ -292,6 +292,11 @@ div#viewport{
 		top: 0;
 		position: absolute;
 	}
+	#b1, #b1 img{
+		top: 0;
+		height: auto;
+		width: 100%;
+	}
 	div.face{
 		bottom: -48vh;
 		left: 70vw;
