--- a/css/viewport.css
+++ b/css/viewport.css
@@ -5,9 +5,8 @@ div#viewport{
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 100%;
 	width: 100vw;
-	z-index: 500;
+	z-index: 600;
 }
 #viewport>div{
 	position: relative;
@@ -21,13 +20,16 @@ div#viewport{
 #viewport h6{
 	border-radius: 2px;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 11pt;
+	font-size: .9rem;
 	font-weight: 400;
-	padding: 10px;
+	padding: 2px;
 	margin-top: 0;
 	color: white;
 }
 @media screen and (max-width: 768px) {
+	#b5{
+		left: -5vw !important;
+	}
 	div#playZone{
 		background-color: rgb(50,50,50, 0.45);
 	}
@@ -39,15 +41,13 @@ div#viewport{
 	div#viewport {
     	visibility: visible;
   	}
-	
-	div.container {
-	  visibility: hidden;
-	  display: none;
-  	}
 	.volume-bar, #volume-input, .volume-bar:hover, img#mutepic, div.song-name{
 		display: none;
 		visibility: hidden;
-		opacity: 0;
+		opacity: 0 !important;
+	}
+	div.background, div.backg, div.backg img, img{
+		z-index: 10 !important;
 	}
 	
 	div.track-list-container, div.track-list{
@@ -55,11 +55,7 @@ div#viewport{
 		margin: 0 auto;
 		display: inline-block;
 		max-height: 50vh;
-		opacity: 1;
-	}
-	div.track-list h4{
-		font-size: 12pt;
-		line-height: 14pt;
+		opacity: 1 !important;
 	}
 	div.track-list-container{
 		position: relative;
@@ -73,40 +69,54 @@ div#viewport{
 		display: inline-block;
 		background-color: rgb(100,100,100, 0);
 		position: relative;
-		min-width: 250px;
-		width: 55vw;
+		min-width: 200px;
+		width: 82vw;
 		margin: 0 auto;
 	}
 	div.track-list p{
 		color: rgb(220, 220, 220);
 	}
-	/*left palm tree 2*/
-	#b5 img{
-		left: 40vw;
-		bottom: -12vh;
-		transform: rotate(8deg);
-	}
 
 	/*right palm tree*/
-	#b6 img{
-		visibility: hidden;
-	}
-
-	/*right palm tree 2*/
-	#b8 img{
-		left: 2vw;
-		top: -12vh;
-	}
-
-	/*left palm tree*/
-	#b7 img{
-		left: -2vw;
-		bottom: -2vh;
-		transform: rotate(6deg);
+	#b6 img, .face{
+		visibility: hidden !important;
 	}
 }
 
-@media only screen and (min-width: 770px) and (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
+		/*city2*/
+		#b2{
+			bottom: -2.2%;
+			left: -10vw;
+		}
+		/*city*/
+		#b3{
+			bottom: -2%;
+			left: 16vw;
+		}
+		/*left palm tree 2*/
+		#b5{
+			left: -2vw;
+			bottom: -3.5%;
+			transform: rotate(14deg) !important;
+		}
+		/*right palm tree*/
+		#b6{
+			right: -3vw;
+			bottom: 20%;
+		}
+		/*left palm tree*/
+		#b7{
+			left: -2vw;
+			bottom: 17%;
+			transform: rotate(6deg);
+		}
+		/*right palm tree 2*/
+		#b8{
+			right: 5vw;
+			top: -3.5%;
+		}
+
 	.track-list{
 		min-width: 380px;
 		opacity: 1;
@@ -117,10 +127,6 @@ div#viewport{
 		font-size: 12pt;
 		line-height: 14pt;
 	}
-	.face {
-        /*transform: scale(0.8);*/
-		bottom: -60px;
-    }
 	.volume-bar{
 		margin-top: 8%;
 	}
@@ -130,9 +136,6 @@ div#viewport{
 }
 
 @media only screen and (min-width : 1440px) {
-	div.face{
-		bottom: -2vh;
-	}
 	.volume-bar{
 		margin-top: 8%;
 	}
@@ -141,56 +144,39 @@ div#viewport{
 	}
 }
 
-
-/*NEEDS FIXING*/
-@media only screen and (min-width : 1824px) {
-	.container>div, .container2>div{
-		transform: scale(1.2);
-	}
-	div.container2{
-		top: 0;
-		position: absolute;
-	}
-	div.face{
-		top: 50vh;
-		left: 60vw;
-	}
+@media only screen and (min-width : 1924px) {
 
 	/*city2*/
 	#b2{
-		bottom: 6vh;
+		bottom: 20.5%;
 		left: 25vw;
 	}
-
 	/*city*/
 	#b3{
-		bottom: 8vh;
-		left: 6vw;
+		bottom: 21%;
+		left: 33vw;
 	}
 	/*left palm tree 2*/
-	#b5 img{
-		left: 6.5vw;
-		bottom: 12vh;
-		transform: rotate(14deg);
+	#b5{
+		left: 22vw;
+		bottom: 21%;
+		transform: rotate(14deg) !important;
 	}
-
 	/*right palm tree*/
-	#b6 img{
-		right: 6vw;
-		top: 30vh;
+	#b6{
+		right: 20vw;
+		bottom: 35%;
 	}
-
-	/*right palm tree 2*/
-	#b8 img{
-		left: 50vw;
-		top: 6vh;
-	}
-
 	/*left palm tree*/
-	#b7 img{
-		left: 7vw;
-		bottom: 28vh;
+	#b7{
+		left: 24vw;
+		bottom: 33%;
 		transform: rotate(6deg);
+	}
+	/*right palm tree 2*/
+	#b8{
+		right: 29vw;
+		top: 20%;
 	}
 
 	div.track-list{
